objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>RoRWA__c</fullName>
        <label>RoRWA (Lifetime %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Role_League__c</fullName>
        <label>Role League</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MLA</fullName>
                </value>
                <value>
                    <fullName>Joint MLA</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryLoan__c</fullName>
        <label>Secondary Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date used for the RPF pipeline calculator functionality</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Syndicated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syndicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Interval__c</fullName>
        <description>Field used to determine what interval users are recording the term in</description>
        <inlineHelpText>Field used to determine what interval users are recording the term in</inlineHelpText>
        <label>Term (Interval)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                    <default>true</default>
                    <label>Years</label>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_Years__c</fullName>
        <inlineHelpText>One has to enter the term in years for upfront fees to apply</inlineHelpText>
        <label>Terms (Years)</label>
        <precision>12</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Hurdle (RoRWA)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transaction_Value__c</fullName>
        <label>Fee Per Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_OppProdLineItem_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays OppProdLineItem ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Underwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unutilised_Facility_Fee__c</fullName>
        <label>Unutilised Facility Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>Volume of transactions. Together with the fees per transaction field determine the recurring fees</description>
        <label>Monthly Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Annualised_Income__c</fullName>
        <formula>Annualised_Income__c *  Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Annualised Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Income_this_Year__c</fullName>
        <formula>Income_this_Year__c *  Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Income this Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Bullet_Amount</fullName>
        <active>true</active>
        <description>Bullet Amount can not be greater than hold size</description>
        <errorConditionFormula>OR(
	AND(
		NOT(ISBLANK(BulletAmount__c)),
		NOT(ISBLANK(Hold_Size__c)),
		BulletAmount__c &gt; Hold_Size__c
	)
	,
	AND
	(
		NOT(ISBLANK(BulletAmount__c)),
		BulletAmount__c &lt; 0
	)
)</errorConditionFormula>
        <errorMessage>Bullet Amount can not be greater than Hold Size or less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FTP</fullName>
        <active>true</active>
        <description>Makes sure FTP is between -10 and 99.99</description>
        <errorConditionFormula>OR 
( 
Ftp__c &lt; -10, 
Ftp__c &gt; 99.99
)</errorConditionFormula>
        <errorMessage>FTP must be between -10 and 99.99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fees</fullName>
        <active>false</active>
        <description>The Annualized Income formula will only work if there is atleast a 0 value in the fees field</description>
        <errorConditionFormula>ISBLANK(Fees__c)</errorConditionFormula>
        <errorDisplayField>Fees__c</errorDisplayField>
        <errorMessage>There must at least be a 0 in the Fees field in order to save a product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative_Fees</fullName>
        <active>true</active>
        <description>Checks if any fees entered are negative</description>
        <errorConditionFormula>OR(
	AND
	(
		NOT(ISBLANK(Arranging_Fee__c)),
		Arranging_Fee__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(Other_Fees__c)),
		Other_Fees__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(Committment_Fee__c)),
		Committment_Fee__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(FlexiFee__c)),
		FlexiFee__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(Annual_Facility_Fee__c)),
		Annual_Facility_Fee__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(Participation_Fee__c)),
		Participation_Fee__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(Agency_Fee__c)),
		Agency_Fee__c &lt; 0
	),
	AND
	(
		NOT(ISBLANK(Co_ordination_Fee__c)),
		Co_ordination_Fee__c &lt; 0
	)
)</errorConditionFormula>
        <errorMessage>Fees can not be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Refinance</fullName>
        <active>true</active>
        <description>Refinance Amount can not be greater than hold size</description>
        <errorConditionFormula>OR(
	AND(
		NOT(ISBLANK(RefinanceAmount__c)),
		NOT(ISBLANK(Hold_Size__c)),
		RefinanceAmount__c &gt; Hold_Size__c
	)
	,
	AND
	(
		NOT(ISBLANK(RefinanceAmount__c)),
		RefinanceAmount__c &lt; 0
	)
)</errorConditionFormula>
        <errorMessage>Refinance Amount can not be greater than Hold Size or less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_Years</fullName>
        <active>true</active>
        <description>Makes sure that the term years don&apos;t go over 99.99999 or under 0</description>
        <errorConditionFormula>OR( Terms_Years__c &lt; 0, Terms_Years__c &gt; 99.99999)</errorConditionFormula>
        <errorMessage>The term must be between 0 and 99 years</errorMessage>
    </validationRules>
</CustomObject>